[gd_scene load_steps=3 format=3 uid="uid://deaw77py3l0jr"]

[ext_resource type="Script" path="res://Scripts/Node2D.gd" id="1_2bgjl"]
[ext_resource type="FontFile" uid="uid://dfbh8en1cype4" path="res://Fonts/Born2bSportyV2.ttf" id="2_emk61"]

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_2bgjl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 579.0
offset_bottom = 1028.0
color = Color(1, 0.423529, 0, 1)

[node name="Title" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 577.0
offset_bottom = 1027.0

[node name="TitleContainer" type="VBoxContainer" parent="Title"]
z_index = 2
layout_mode = 0
offset_top = 1.0
offset_right = 578.0
offset_bottom = 1027.0

[node name="Title" type="Label" parent="Title/TitleContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_emk61")
theme_override_font_sizes/font_size = 125
text = "Tic Tac Toe
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="Title/TitleContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_emk61")
theme_override_font_sizes/font_size = 65
text = "by Tanish Maheshwari"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="Title"]
z_index = 1
layout_mode = 2
offset_top = -1.0
offset_right = 579.0
offset_bottom = 207.0
color = Color(0.764706, 1, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 207.0
offset_right = 579.0
offset_bottom = 1029.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_top = 4.0
offset_right = 580.0
offset_bottom = 818.0
theme_override_constants/separation = 35
alignment = 1

[node name="PlayButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Play!"

[node name="OptionsButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Quit
"

[connection signal="button_up" from="Control/VBoxContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="pressed" from="Control/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="button_up" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
